--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/StatusBarTheme"
         tools:targetApi="31">
+
         <activity
             android:theme="@style/SplashTheme"
             android:name=".ui.SplashScreen"
@@ -29,8 +30,12 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true">
+            <meta-data
+                android:name="android.app.lib.name"
+                android:value="" />
+
         </activity>
     </application>
 
